test/users/wmikanik/domain64-badworkaround.good
domain64-badworkaround.chpl:8: error: invalid copy-initialization
domain64-badworkaround.chpl:8: error: range(bounds=both) cannot be initialized from range(bounds=neither)
